Bug 340281 - konsole only recognizes the part after "+" in mail+something@mail.ext as an email address
Summary: konsole only recognizes the part after "+" in mail+something@mail.ext as an e...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-24 07:55 UTC by Moviuro
Modified: 2018-02-14 02:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Moviuro 2014-10-24 07:55:52 UTC
Konsole usually creates mailto: links out of what is believed to be a mail address. However, it doesn't recognize addresses with a '+' in it, e.g. moviuro+kde@provider.net

Reproducible: Always

Steps to Reproduce:
1. echo 'moviuro+kde@provider.net'
2. Ctrl+click the echo-ed address

Actual Results:  
Opens mail composer for kde@provider.net

Expected Results:  
Opens mail composer for moviuro+kde@provider.net

Matching emails can be extremely complicated. Is it really out of the question to use the real regex? (http://ex-parrot.com/~pdw/Mail-RFC822-Address.html)
This would also prevent systemd services files to be seen as email addresses. (Filing an other bug for this)
Comment 1 Kurt Hindenburg 2018-02-13 23:32:50 UTC
I don't know if you are joking or not, but Konsole is not likely to use that huge regex.  I do think + is common enough to add.
Comment 2 Kurt Hindenburg 2018-02-14 02:23:15 UTC
Git commit cfa2e01543eb558e1584b0dcb963411d7836c483 by Kurt Hindenburg.
Committed on 14/02/2018 at 02:20.
Pushed by hindenburg into branch 'master'.

Fix to allow + in email names (firstname+lastname@example.com)

M  +1    -1    src/Filter.cpp

https://commits.kde.org/konsole/cfa2e01543eb558e1584b0dcb963411d7836c483