Fix to allow + in email names (firstname+lastname@example.com)

BUG: 340281